    * fixed cookie domain handling according to RFC 6265
    * fixed qvalue format in Accept-Language HTTP header
    * fixed sorting files case insensitively in file scheme handler
    * fixed possible crash in saving page screen of a really long page
    * fixed showing window in fullscreen with XFCE
    * X11: fixed Ctrl+Q shortcut for DEs other than KDE and Gnome
    * windows: fixed downloading utf-8 encoded adblock subscriptions
    * windows: improved installer allows registering as default web browser
    * windows: check and set as default browser from preferences
    * mac: fixed not working global menu after closing browser window

Version 1.3.5
    * released 16 September 2012
    * new Persian translation
    * option to remove web search bar
    * warning user when removing page from speed dial
    * option to align pages to center in speed dial
    * added shortcut for Clear private data
    * new options in AdBlock menu to disable it for domain and for single page
    * added option to disable search suggestions in search bar
    * added option to choose what to suggest in address bar
    * Save x as ... actions will always show file dialog
    * possibility to choose to use external download manager on every download
    * remember last section in preferences
    * much more tabs now fits into tabbar without overflowing into tab buttons
    * smarter address bar completer will show better search results
    * support for bookmarks manager and sidebar drag&drop managing bookmarks
    * new User Agent manager lets you set User Agent per site
    * new restore session page lets you choose which tabs you want to restore
    * new scheme handler for file protocol allows browsing through directories
    * new option to show loading progress in address bar
    * new option to hide close button on tabs
    * new option to start new instance with --no-remote option
    * X11: restore windows on correct virtual desktops